--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,34 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
+:root {
+  font-size: calc(0.5em + 1vw);
+
+  --clr-white: #ffffff;
+  --clr-black: #000000;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+html,
+body,
+h1,
+h3,
+p {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  line-height: 1.5;
+  background-color: var(--clr-white);
+  color: var(--clr-black);
 }
 
 a {
@@ -11,6 +36,6 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+img {
+  max-width: 100%;
 }
