--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,3 +43,18 @@ img {
 .chartContainer {
   height: 100vh;
 }
+
+table {
+  border: 2px solid teal;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+table td,
+table th {
+  border: 1px solid teal;
+}
+
+table th {
+  padding: 0.5rem;
+}
