--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -5,3 +5,25 @@
 .main > * + * {
   margin-top: 4rem;
 }
+
+.tables {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tables > * + * {
+  margin-top: 2rem;
+}
+
+@media (min-width: 52em) {
+  .tables {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .tables > * + * {
+    margin-top: 0;
+  }
+}
